fixed new list spacing

--- a/frontend/src/styles/newList/newList.module.css
+++ b/frontend/src/styles/newList/newList.module.css
@@ -64,7 +64,7 @@
   box-sizing: border-box;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
   background-color: #fff;
-  margin: 20px 0 0;
+  margin: 29px 0 0;
 }
 
 .newList h3 {
